# friday

./: .env.example  README.md  package.json  pyproject.toml  turbo.json
api/: main.py
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/voice/realtime/: route.ts
prisma/: schema.prisma
src/friday/: __init__.py  cli.py  core.py
tests/: test_core.py
