[project]
name = "friday-jarvis-core"
version = "0.1.0"
description = "FRIDAY: a modular voice-first AI assistant inspired by JARVIS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.vercel]
entrypoint = "api/main.py"
